--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="Receta/receta lasagna.html">Ejercicio receta</a></li>
         <li><a href="Articulo/Ejercicio3Creo.html">Ejercicio noticia</a></li>
         <li><a href="Proyecto 1/ultiimojuro.html">Proyecto 1</a></li>
+        <li><a href="Ritmo y escala/article 1.html">Ritmo y escala</a></li>
 
       </ol>
       <br>
