--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <li><a href="Articulo/Ejercicio3Creo.html">Ejercicio noticia</a></li>
         <li><a href="Proyecto 1/ultiimojuro.html">Proyecto 1</a></li>
         <li><a href="Ritmo y escala/article 1.html">Ritmo y escala</a></li>
+        <li><a href="Historia tipografia.html">Historia de la tipografia web</a></li>
+
 
       </ol>
       <br>
