--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="Proyecto 1/ultiimojuro.html">Proyecto 1</a></li>
         <li><a href="Ritmo y escala/article 1.html">Ritmo y escala</a></li>
         <li><a href="historia/Historia tipografia.html">Historia de la tipografia web</a></li>
+        <li><a href="Animacion CSS/JORGE PAREDES CSS.html">Animacion CSS</a></li>
 
 
       </ol>
